<resources>





    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="sign_in">Sign In</string>

    <string name="app_name">Gozem Test</string>
    <string name="to">to</string>
    <string name="subject">subject</string>
    <string name="message">message</string>
    <string name="launch_text">created by</string>
    <string name="launch_text_enterprise">Test By Kemtsop fomena Landry</string>
    <string name="email_address">Email</string>
    <string name="password">Mot de passe</string>
    <string name="connexion">connexion</string>
    <string name="etape_1">ETAPE 1</string>
    <string name="etape_2">ETAPE 2</string>
    <string name="etape_3">ETAPE 3</string>
    <string name="etape_4">ETAPE 4</string>
    <string name="prendre_photo">Prendre une photo</string>
    <string name="title_activity_take_picture2">MainActivity</string>
    <string name="title_formulaire">Formulaire</string>
    <string name="title_agents">Agents</string>
    <string name="title_notifications">Notifications</string>
    <string name="formulaire">Formulaire</string>
    <string name="agents">Agents</string>
    <string name="title_activity_take_picture_actuvity3">MainActivity</string>
    <string name="title_activity_take_picture3">MainActivity</string>
    <string name="name">Nom</string>
    <string name="residence">Résidence</string>
    <string name="numero_telephone">Numéro de téléphone</string>
    <string name="lieu_naissance">Lieu de Naissance</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="prenom">Prénom</string>
    <string name="nom_entreprise_collecteur">Nom Entreprise du Collecteur</string>
    <string name="numero_cni">Numéro CNI</string>
    <string name="profession_agent">Profession de l\'agent</string>
    <string name="activite">Activité</string>
    <string name="capital_initial_agent">Salary initial de l\'agent</string>
    <string name="source_financiere_agent">Source financière de l\'agent</string>
    <string name="entreprise_agent">Entreprise de l\'agent</string>
    <string name="smobilpay_id_utilisateur">Smobilpay ID utilisateur</string>
    <string name="donnees_enregistree">Les données ont bien été enregistrées</string>
    <string name="agents_enregistrer">Agents enregistrés</string>
    <string name="search_bar">Recherche</string>
    <string name="agent_1">Lebron James</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="main_menu">Menu principal</string>
    <string name="donnees_supprimer">Agent supprimé</string>
    <string name="donnees_modifier">Informations modifiées</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="filmer_recto">recto de la cni</string>
    <string name="filmer_verso">verso de la cni</string>
    <string name="Photo_point_de_vente">photo de l\'agent</string>
    <string name="Photo_de_lagent">photo point de vente</string>
    <string name="next">Next</string>
    <string name="previews">Previews</string>
    <string name="num_ro_de_t_l_phone_691729395">Numéro de Telephone : </string>
    <string name="r_sidence_ou_adresse_logbessou">Résidence ou Adresse : </string>
    <string name="nom_entreprise_du_collecteur_digital_post">Entreprise du collecteur : </string>
    <string name="num_ro_cni_2017651949646561">Numéro de la CNI  </string>
    <string name="phone_number">691729395</string>
    <string name="logbessou">Logbessou</string>
    <string name="entreprise">Digital Post</string>
    <string name="_201764986513165">201764986513165</string>
    <string name="Terminer">Terminer</string>
    <string name="date">17/01/1990</string>
    <string name="douala">douala</string>
    <string name="digitalPost">digitalpost</string>
    <string name="Medecin">Medecin</string>
    <string name="Vendeur">commercant</string>
    <string name="capital_initial_500000">500000</string>
    <string name="don">Don</string>
    <string name="smobilpay4569">smobilpay4569</string>
    <string name="sign_up">Signup</string>
    <string name="map">Map</string>
    <string name="feature_to_be_implemented">Feature available in the next version</string>


</resources>