<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".InfosOneAgentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/back"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:layout_marginTop="20dp"
            android:src="@drawable/path"
             />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/back">

        <androidx.cardview.widget.CardView
            android:id="@+id/first_agent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@color/background_color"
            app:cardBackgroundColor="@color/background_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <ImageView

                    android:id="@+id/cardImages"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/aubin" />

                <TextView
                    android:id="@+id/cardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/num_ro_de_t_l_phone_691729395"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/phone_number"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/r_sidence_ou_adresse_logbessou"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/logbessou"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/nom_entreprise_du_collecteur_digital_post"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/entreprise"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/num_ro_cni_2017651949646561"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_201764986513165"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>