<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".ui.step3.Step3Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nom_entreprise_collecteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_entreprise_custom"
            android:drawableLeft="@drawable/ic_entreprise"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/nom_entreprise_collecteur"
            android:inputType="text"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/numero_cni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_cni_custom"
            android:drawableLeft="@drawable/ic_cni"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/numero_cni"
            android:inputType="number"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/profession_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_profession_custom"
            android:drawableLeft="@drawable/ic_profession"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/profession_agent"
            android:inputType="text"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_activite_custom"
            android:drawableLeft="@drawable/ic_activite"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/activite"
            android:inputType="text"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/capital_initial_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_capital_custom"
            android:drawableLeft="@drawable/ic_capital"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/capital_initial_agent"
            android:inputType="text"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/source_financiere_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/ic_source_financiere_custom"
            android:drawableLeft="@drawable/ic_source_financiere"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/source_financiere_agent"
            android:inputType="text"
            android:paddingStart="6dp"
            android:paddingTop="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>





</FrameLayout>