<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.kycapp.ui.profileForm.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_sucessRegistrationFragment"
            app:destination="@id/sucessRegistrationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.kycapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_agentDetailsFragment"
            app:destination="@id/agentDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.kycapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/agentDetailsFragment"
        android:name="com.example.kycapp.ui.agentDetails.AgentDetailsFragment"
        android:label="agent_details_fragment"
        tools:layout="@layout/agent_details_fragment" >
        <argument
            android:name="agent"
            app:argType="com.example.kycapp.entites.Agent"
            />
    </fragment>
    <fragment
        android:id="@+id/sucessRegistrationFragment"
        android:name="com.example.kycapp.ui.profileForm.successRegistration.SucessRegistrationFragment"
        android:label="sucess_registration_fragment"
        tools:layout="@layout/sucess_registration_fragment" >
        <action
            android:id="@+id/action_sucessRegistrationFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.kycapp.ui.map.MapFragment"
        android:label="MapFragment" />
</navigation>