<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".ui.step2.Step2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_account_login_custom"
            android:drawableLeft="@drawable/ic_account_login"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:background="@drawable/custom_input"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prenom"
            android:inputType="text"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_account_login_custom"
            android:drawableLeft="@drawable/ic_account_login"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="6dp"
            android:layout_marginTop="4dp"
            android:paddingBottom="6dp"
            android:background="@drawable/custom_input"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/date_naissance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_naissance"
            android:inputType="text"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_calendar_custom"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="6dp"
            android:layout_marginTop="4dp"
            android:paddingBottom="6dp"
            android:background="@drawable/custom_input"
            android:layout_marginVertical="8dp"/>

        <EditText
            android:id="@+id/lieu_naissance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lieu_naissance"
            android:inputType="text"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_location_custom"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="6dp"
            android:layout_marginTop="4dp"
            android:paddingBottom="6dp"
            android:background="@drawable/custom_input"
            android:layout_marginVertical="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/numero_telephone"
            android:background="@drawable/custom_input"
            android:layout_marginVertical="8dp"
            android:layout_height="wrap_content">
            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                app:ccp_defaultNameCode="CM"
                app:ccp_showNameCode="false"
                android:textSize="10sp"
                android:drawableStart="@drawable/ic_phone_custom"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/numero_telephone"
                android:phoneNumber="true"
                android:inputType="phone"
                android:textSize="14sp"
android:id="@+id/phoneNumber"
                android:background="@null"
                android:drawablePadding="10dp"
                android:textColor="@color/white"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:layout_marginTop="4dp"
                />
        </LinearLayout>



        <EditText
            android:id="@+id/residence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/residence"
            android:inputType="text"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_home_custom"
            android:drawableLeft="@drawable/ic_home"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="6dp"
            android:layout_marginVertical="8dp"
            android:paddingBottom="6dp"
            android:background="@drawable/custom_input" />
    </LinearLayout>





</FrameLayout>